<resources xmlns:tools="http://schemas.android.com/tools"
		   tools:locale="en">
	<string name="app_name">Munin for Android</string>
	<string name="app_name_invariable" translatable="false">Munin for Android</string>
	<string name="button_graphs">Graphs</string>
	<string name="button_server">Servers</string>
	<string name="button_premium">Go premium</string>
	<string name="button_alerts">Alerts</string>
	<string name="button_labels">Labels</string>
	<string name="button_grid">Grids</string>
	<string name="button_notifications">Notifications</string>
	<string name="settings_URL_label">Munin-master URL</string>
	<string name="settings_URL_label2">ex: https://88.180.108.192:80/munin/</string>
	<string name="settings_text">… or select a sample server:</string>
	<string name="settings_http_auth2">HTTP auth required</string>
	<string name="settings_hdgraphs">Enable HD graphs</string>
	<string name="settings_hdgraphs_text">Try to use DynaZoom in order to get high definition graphs</string>
	<string name="settings_auth_type">Auth type</string>
	<string name="settings_login">Login</string>
	<string name="settings_password">Password</string>
	<string name="settings_default_scale">Graph default scale</string>
	<string name="settings_screenalwayson_label">Screen always on</string>
	<string name="settings_screenalwayson_checkbox">Prevent screen from turning off while displaying graphs / alerts</string>
	<string name="settings_autorefresh_label">Auto refresh</string>
	<string name="settings_autorefresh_checkbox">Automatically refresh graphs / alerts every 5 minutes while displaying those</string>
	<string name="settings_enablegraphszoom">Enable graphs zoom</string>
	<string name="settings_titlelabel_app">Application settings</string>
	<string name="settings_titlelabel_graphs">Graphs settings</string>
	<string name="save_button">Save</string>
	<string name="menu_graph_refresh">Refresh</string>
	<string name="menu_graph_save">Save graph to SD card</string>
	<string name="menu_graph_switch">Switch node</string>
	<string name="menu_addserver_save">Save server</string>
	<string name="menu_addserver_delete">Delete server</string>
	<string name="loading">Loading…</string>
	<string name="search">Search</string>
	<string name="about_eraseData">Reset app</string>
	<string name="about_gplay">Rate the app</string>
	<string name="servers_noservers_1">No server yet</string>
	<string name="servers_noservers_2">Add yours or sample ones now by tapping on +</string>
	<string name="edit">Edit</string>
	<string name="addToHomescreen">Add to homescreen</string>
	<string name="addToHomescreen_confirm">A shortcut for %1$s has been added to your homescreen</string>
	<string name="yourerunning">You\'re running</string>
	<string name="openInBrowser">Open in browser</string>
	<string name="fieldsDescription">Fields description</string>
	<string name="follow">Follow on Twitter</string>
	<string name="notifs_vibrate">Vibrate</string>
	<string name="aboutHTMLStructure" translatable="false">
		<![CDATA[
	    <head>
	    <style>
	    	p { padding: 0px 10px; } body { text-align: justify; color: #555; font-size:0.95em; } a { color: #1184C3; text-decoration: none; }
	    	h2 { width: 100%; color:#1184C3; margin: 40px 0px 4px 0px; font-weight: bold; font-variant:small-caps; font-size:1.6em; }
	    </style>
	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
	    </head>
	    <body>
	    <p>{firstPhrase}</p> <p>{independantApp}</p> <p></p> <p>{changelog}</p> <p></p> <p>{openSource}</p>
	    <h2>{specialThanksTitle}</h2>
	    <ul>{specialThanks}</ul>
	    <br />
	    </body>]]>
	</string>
	<string name="about_firstPhrase"><![CDATA[Want to say hi? Have an innovative idea to improve the app? Discovered a critical issue? Please feel free to send an email at <b><u>support@munin-for-android.com</u></b>! Thanks!]]></string>
	<string name="about_independantApp">This app was independently developed - It is not the official app.</string>
	<string name="about_changelog"><![CDATA[Please go to <a href="http://munin-for-android.com/">munin-for-android.com</a> to see complete changelog and version notes.]]></string>
	<string name="about_openSource"><![CDATA[Munin for Android is open-source! <a href="https://github.com/chteuchteu/Munin-for-Android">You can contribute to the project on GitHub</a>.
	    	The app is distributed under the GNU GPL version 2.]]></string>
	<string name="about_specialThanksTitle">Special thanks</string>
	<string name="about_specialThanks" translatable="false"><![CDATA[
		<li>Steve Schnepp, lead dev. of Munin</li>
	    <li>Alessandro <i>\"override\"</i></li>
	    <li>#munin IRC: olasd</li>
	    <li>Christian Petri, <a href="http://lucas-garte.com/">Lucas Garte</a>, Jan Vonde: german translation</li>
	    <li>Konstantin Batkin: russian translation</li>
	    <li>Edwin van Ouwerkerk Moria</li>
	    <li>Juan Moyano (wincus): spanish translation</li>
	    <li>Project contributors on GitHub</li>
	]]></string>
	<string name="about_librariesTitle">Libraries</string>
	<string name="goPremiumHTMLStructure" translatable="false">
		<![CDATA[
	    <head>
	    <style>
	    	p { padding: 0px 15px; } a { color: #1184C3; text-decoration: none; } li { margin-bottom: 5px; }
	    	h2 { width: 100%; color:#1184C3; margin: 10px 0px 4px 0px; font-weight: bold; font-variant:small-caps; font-size:1.6em; }
	    	body { text-align: justify; color: #555; font-size:1em; }
	    </style>
	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
	    </head>
	    <body>
	    <h2>{title}</h2>
	    <ul> {features} </ul>
	    <br />
	    </body>]]>
	</string>
	<string name="goPremium_title">Munin for Android Features Pack</string>
	<string name="goPremium_features"><![CDATA[
		<li>Graphs grids</li>
	    <li>Graph Widgets</li>
	    <li>Digest auth</li>
	    <li>Notifications</li>
	    <li>High-priority support</li>
	    <li>Single pack of premium features: pay once for actual and upcoming premium features!</li>
	    <li>And more to come! Be sure to enable auto-updates in Google Play to receive latest premium features</li>
	]]></string>
	<string name="buy_now">BUY NOW</string>
	<string name="splashDesc">Loading</string>
	<string name="graphView_ImageViewDescription">Graph</string>
	<string name="addServerTitle">Add a server</string>
	<string name="renameMaster">Rename master</string>
	<string name="serversTitle">Servers</string>
	<string name="settingsTitle">Settings</string>
	<string name="aboutTitle">About Munin for Android</string>
	<string name="goPremiumTitle">Go Premium</string>
	<string name="alertsTitle">Alerts</string>
	<string name="notificationsTitle">Notifications</string>
	<string name="widget_configuration1">Success! The widget has been added to your home screen. Tip: you can update the graph by taping on the grey bar at the bottom of the widget!</string>
	<string name="widget_configuration2">Auto-update the graph only by Wifi (1 update per hour)</string>
	<string name="widget_configuration3">Hide node name</string>
	<string name="settings_defaultnode">Default node</string>
	<string name="settings_lang">App language</string>
	<string name="lang_english">English</string>
	<string name="lang_french">French</string>
	<string name="lang_german">German</string>
	<string name="lang_russian">Russian</string>
	<string name="lang_spanish">Spanish</string>
	<string name="lang_italian">Italian</string>
	<string name="lang_ukrainian">Ukrainian</string>
	<string name="lang_dutch">Dutch</string>
	<string name="lang_japanese">Japanese</string>
	<string name="lang_hungarian">Hungarian</string>
	<string name="lang_chinese">Chinese (China)</string>
	<string name="lang_finnish">Finnish</string>
	<string name="lang_portuguese_brazil">Portuguese (Brazil)</string>
	<string name="lang_chinese_taiwan">Chinese (Taiwan)</string>
	<string name="lang_polish">Polish</string>
	<string name="text01">Settings and servers configuration will be reset. Are you sure?</string>
	<string name="text02">Reset performed.</string>
	<string name="text09">Error!</string>
	<string name="text11">Google Play app seems to be missing on your phone.</string>
	<string name="text16">The URL doesn\'t seem to be good. Please check it again.</string>
	<string name="text18">Success!</string>
	<string name="text21.1"> node</string>
	<string name="text21.2"> added!\n</string>
	<string name="success">Success</string>
	<string name="text27"> plugins found!</string>
	<string name="text28">Graph saved as /muninForAndroid/</string>
	<string name="text29">Error while saving the graph</string>
	<string name="text30">No internet connection</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="text35">Learn more…</string>
	<string name="text36">Settings saved successfully!</string>
	<string name="text37">No server set. Please set one in the settings.</string>
	<string name="text39">Please wait while the app does some update operations…</string>
	<string name="text42">Loading…</string>
	<string name="text43">Please wait…</string>
	<string name="text44">Fetching URL…</string>
	<string name="text45">Saving!</string>
	<string name="text46">Reaching node </string>
	<string name="text47.1">day</string>
	<string name="text47.2">week</string>
	<string name="text47.3">month</string>
	<string name="text47.4">year</string>
	<string name="text49.1">Hide normal state nodes</string>
	<string name="text49.2">Show normal state nodes</string>
	<string name="text50.1">critical</string>
	<string name="text50.2">criticals</string>
	<string name="text51.1">warning</string>
	<string name="text51.2">warnings</string>
	<string name="text52">Enable notifications</string>
	<string name="text53">Update by Wifi only</string>
	<string name="text54">Estimated data consumption: ?? /day</string>
	<string name="text55">Refresh rate</string>
	<string name="text56">Select nodes to watch</string>
	<string name="text57">10 minutes/30 minutes/1 hour/2 hours/5 hours/10 hours/24 hours</string>
	<string name="text58"> critical / criticals /&amp; / warning / warnings /on / node/ nodes</string>
	<string name="text60">Continue</string>
	<string name="text61">Add</string>
	<string name="text62">There\'s no label yet</string>
	<string name="text64">Cancel</string>
	<string name="text65">Digest auth is available with the Munin for Android Features Pack ($1.49).</string>
	<string name="text75">Grid</string>
	<string name="text76">Change period…</string>
	<string name="text79">Open</string>
	<string name="user_agent">User Agent</string>
	<string name="grids_legend">Grids legend</string>
	<string name="grids_settings">Grids settings</string>
	<string name="defaultActivity">Default activity</string>
	<string name="label">Label</string>
    <string name="chromecast_application_id">Chromecast Application ID</string>
    <string name="import_export_server">Import/Export server</string>
    <string name="reset">Reset</string>
	<string name="advanced">Advanced</string>
	<string name="disable_chromecast">Disable Chromecast feature</string>
	<string name="disable_chromecast_text">If you don\'t own a Chromecast, you may want to disable its usage in the app</string>
	<string name="graphs_autoload">Automatically load graphs</string>
	<string name="notifications_device_code">Device code</string>
	<string name="notifications_instructions">You have to configure each master so they can send notifications to this device.</string>
	<string name="notifications_sendByMail">Send me the code and instructions by mail</string>
	<string name="ignoreRules">Ignore rules</string>
	<string name="manageIgnoreRules">Manage ignore rules</string>
	<string name="push_notifications">Push notifications</string>
	<string name="push_explanation">Recommended: in this mode, munin pushes alerts directly to your device.
		This allows real-time notifications, low battery footprint and reduced data usage but you have to install a small script on each master.</string>
</resources>