<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto" >

	<item
		android:id="@+id/menu_period"
		app:showAsAction="ifRoom"
		android:title="@string/text76">
		<menu>
			<item
				android:id="@+id/period_day"
				android:title="@string/text47.1"/>
			<item
				android:id="@+id/period_week"
				android:title="@string/text47.2"/>
			<item
				android:id="@+id/period_month"
				android:title="@string/text47.3"/>
			<item
				android:id="@+id/period_year"
				android:title="@string/text47.4"/>
		</menu>
	</item>
	<item
		android:id="@+id/menu_labels"
		android:icon="@drawable/collections_labels"
		app:showAsAction="ifRoom"
		android:title="@string/button_labels"/>
	<item
		android:id="@+id/menu_save"
		android:icon="@drawable/content_save_dark"
		app:showAsAction="withText"
		android:title="@string/menu_graph_save"/>
	<item
		android:id="@+id/menu_previous"
		android:icon="@drawable/navigation_previous_item_dark"
		app:showAsAction="ifRoom"
		android:title="@string/menu_graph_previous"/>
	<item
		android:id="@+id/menu_next"
		android:icon="@drawable/navigation_next_item_dark"
		app:showAsAction="ifRoom"
		android:title="@string/menu_graph_next"/>
	<item
		android:id="@+id/menu_refresh"
		android:icon="@drawable/navigation_refresh_dark"
		app:showAsAction="withText"
		android:title="@string/menu_graph_refresh"/> <!-- Texte et icône: ifRoom|withText -->
	<item
		android:id="@+id/menu_switchServer"
		app:showAsAction="withText"
		android:title="@string/menu_graph_switch"/>
	<item
		android:id="@+id/menu_openinbrowser"
		app:showAsAction="withText"
		android:title="@string/openInBrowser"
		android:visible="false"/>
	<item
		android:id="@+id/menu_fieldsDescription"
		app:showAsAction="withText"
		android:title="@string/fieldsDescription"
		android:visible="false"/>

</menu>