<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/navigation_accept_dark"
        app:showAsAction="ifRoom"
        android:title="@string/save_button"/> <!-- Texte et icône: ifRoom|withText -->

    <item
        android:id="@+id/menu_reset"
        android:icon="@drawable/content_save_dark"
		app:showAsAction="withText"
        android:title="@string/about_eraseData"/>
    <item
        android:id="@+id/menu_gplay"
        android:icon="@drawable/navigation_refresh_dark"
		app:showAsAction="withText"
        android:title="@string/about_gplay"/>
	<item
		android:id="@+id/menu_twitter"
		app:showAsAction="never"
		android:title="@string/follow" />

</menu>