<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto" >

	<item
		android:id="@+id/menu_period"
		app:showAsAction="ifRoom"
		android:title="@string/text76">
		<menu>
			<item
				android:id="@+id/period_day"
				android:title="@string/text47.1"/>
			<item
				android:id="@+id/period_week"
				android:title="@string/text47.2"/>
			<item
				android:id="@+id/period_month"
				android:title="@string/text47.3"/>
			<item
				android:id="@+id/period_year"
				android:title="@string/text47.4"/>
		</menu>
	</item>
	<item
		android:id="@+id/menu_open"
		android:icon="@drawable/content_graph"
		app:showAsAction="ifRoom"
		android:title="@string/text79"
		android:visible="false"/>
	<item
		android:id="@+id/menu_refresh"
		android:icon="@drawable/navigation_refresh_dark"
		app:showAsAction="ifRoom"
		android:title="@string/menu_graph_refresh"/>
	<item
		android:id="@+id/menu_edit"
		app:showAsAction="never"
		android:title="@string/edit"/>

</menu>