<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/listview_horizontal_margin"
    android:paddingRight="@dimen/listview_horizontal_margin">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/card"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:tag="set_font"
                style="@style/Material_SubTitle"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/push_notifications" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_explanation"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <RelativeLayout
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                style="@style/Settings_Item"
                android:tag="checkable">

                <TextView
                    android:id="@+id/test"
                    style="@style/Settings_Checkbox_Label"
                    android:text="@string/text52"/>
                <CheckBox
                    android:id="@+id/checkbox_notifications"
                    style="@style/Settings_Checkbox"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/notificationsEnabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View style="@style/Material_Divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="35dp"
                        android:textColor="#666666"
                        android:textSize="14sp"
                        android:text="@string/notifications_device_code" />

                    <TextView
                        android:id="@+id/device_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    style="@style/Settings_Item"
                    android:tag="checkable">

                    <TextView
                        style="@style/Settings_Checkbox_Label"
                        android:text="@string/notifs_vibrate"/>
                    <CheckBox
                        android:id="@+id/checkbox_vibrate"
                        style="@style/Settings_Checkbox"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications_instructions"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp" />

                <Button
                    android:id="@+id/sendByMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications_sendByMail"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp" />

                <TextView
                    android:tag="set_font"
                    style="@style/Material_SubTitle"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/ignoreRules" />

                <TextView
                    android:id="@+id/ignoreRulesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp" />

                <Button
                    android:id="@+id/manageIgnoreRules"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manageIgnoreRules"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
